logs/dag_id=ETL/run_id=scheduled__2023-05-25T00:00:00+00:00/task_id=add_data/attempt=51.log
[2023-05-26T16:39:11.885+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [queued]>
[2023-05-26T16:39:11.901+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [queued]>
[2023-05-26T16:39:11.901+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-26T16:39:11.901+0000] {taskinstance.py:1283} INFO - Starting attempt 51 of 56
[2023-05-26T16:39:11.901+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-26T16:39:11.929+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): add_data> on 2023-05-25 00:00:00+00:00
[2023-05-26T16:39:11.936+0000] {standard_task_runner.py:55} INFO - Started process 2629 to run task
[2023-05-26T16:39:11.942+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'ETL', 'add_data', 'scheduled__2023-05-25T00:00:00+00:00', '--job-id', '346', '--raw', '--subdir', 'DAGS_FOLDER/refresh_token_DAG.py', '--cfg-path', '/tmp/tmpbba3ptik']
[2023-05-26T16:39:11.944+0000] {standard_task_runner.py:83} INFO - Job 346: Subtask add_data
[2023-05-26T16:39:12.050+0000] {task_command.py:388} INFO - Running <TaskInstance: ETL.add_data scheduled__2023-05-25T00:00:00+00:00 [running]> on host 05172cfd5782
[2023-05-26T16:39:12.737+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=ETL
AIRFLOW_CTX_TASK_ID=add_data
AIRFLOW_CTX_EXECUTION_DATE=2023-05-25T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=51
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-05-25T00:00:00+00:00
[2023-05-26T16:39:12.738+0000] {sql.py:254} INFO - Executing: 
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:34:43.515Z',
            'Three Days Grace',
            'I Am Machine',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:31:23.014Z',
            'Nelly Furtado',
            'Say It Right',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:27:39.569Z',
            'MIRE',
            'Lightless',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:22:17.380Z',
            'Cryoshell',
            'Creeping in My Soul',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:18:21.511Z',
            'Eric Prydz',
            'Pjanoo - Radio Edit',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:15:43.550Z',
            'Samantha Fox',
            'Touch Me (I Want Your Body)',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:12:01.077Z',
            'Dead by April',
            'Losing You',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:08:02.808Z',
            'Calvin Harris',
            'This Is What You Came For',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:04:19.983Z',
            'Linkin Park',
            'What I've Done',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:00:53.810Z',
            'Rage Against The Machine',
            'Killing In The Name',
            '2023-05-26'
            )
            
[2023-05-26T16:39:12.755+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-26T16:39:13.229+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-26T16:39:13.237+0000] {sql.py:375} INFO - Running statement: 
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:34:43.515Z',
            'Three Days Grace',
            'I Am Machine',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:31:23.014Z',
            'Nelly Furtado',
            'Say It Right',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:27:39.569Z',
            'MIRE',
            'Lightless',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:22:17.380Z',
            'Cryoshell',
            'Creeping in My Soul',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:18:21.511Z',
            'Eric Prydz',
            'Pjanoo - Radio Edit',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:15:43.550Z',
            'Samantha Fox',
            'Touch Me (I Want Your Body)',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:12:01.077Z',
            'Dead by April',
            'Losing You',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:08:02.808Z',
            'Calvin Harris',
            'This Is What You Came For',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:04:19.983Z',
            'Linkin Park',
            'What I've Done',
            '2023-05-26'
            );
            insert into spotify_data (played_at, artist, name_track, timestamps) values 
            ('2023-05-26T16:00:53.810Z',
            'Rage Against The Machine',
            'Killing In The Name',
            '2023-05-26'
            )
            , parameters: None
[2023-05-26T16:39:13.240+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "ve"
LINE 53:             'What I've Done',
                             ^

[2023-05-26T16:39:13.253+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL, task_id=add_data, execution_date=20230525T000000, start_date=20230526T163911, end_date=20230526T163913
[2023-05-26T16:39:13.276+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 346 for task add_data (syntax error at or near "ve"
LINE 53:             'What I've Done',
                             ^
; 2629)
[2023-05-26T16:39:13.320+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-26T16:39:13.347+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
